--- a/gb/20/7/6/n12236078.md
+++ b/gb/20/7/6/n12236078.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ksgvho3562/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ksgvho3562/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ksgvho3562/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ksgvho3562/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ksgvho3562/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>因应多元阅读需求 屏东图书馆服务再升级</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/0fa007b944f655e3b0d7a226d90e01bd-600x400.jpg" />
 <h6>屏东县公共图书馆服务再升级，满足读者多元化需求。（屏东县政府文化处提供）
 </h6>
 <hr>
-<p>【大纪元2020年07月06日讯】（大纪元记者简惠敏台湾<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a>报导）屏东县公共<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E5%9B%BE%E4%B9%A6%E9%A6%86.md#1">图书馆</a>服务再升级，7月起与屏东邮局合作，提升通阅服务效率，让各乡镇的图书可以快速流通，缩短等书期。同时，各图书馆数位化设备也全面提升，提供更完善的资讯近用与学习环境，满足读者多元化需求。</p>
-<p><ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a>县政府文化处表示，屏县从2018年推出免费通阅服务，只要线上申请，读者可以就近于<ahref="https://github.com/ksgvho3562/djy/blob/master/gb/tag/%E5%9B%BE%E4%B9%A6%E9%A6%86.md#1">图书馆</a>借阅县内其他乡镇图书馆的书籍，通阅通还的便利措施，让借阅率大幅提升。以今年上半年通阅量统计共量2万2050册，较去年上半年1万4796册，明显成长。</p>
+<p>【大纪元2020年07月06日讯】（大纪元记者简惠敏台湾<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a>报导）屏东县公共<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9B%BE%E4%B9%A6%E9%A6%86.md#1">图书馆</a>服务再升级，7月起与屏东邮局合作，提升通阅服务效率，让各乡镇的图书可以快速流通，缩短等书期。同时，各图书馆数位化设备也全面提升，提供更完善的资讯近用与学习环境，满足读者多元化需求。</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C.md#1">屏东</a>县政府文化处表示，屏县从2018年推出免费通阅服务，只要线上申请，读者可以就近于<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9B%BE%E4%B9%A6%E9%A6%86.md#1">图书馆</a>借阅县内其他乡镇图书馆的书籍，通阅通还的便利措施，让借阅率大幅提升。以今年上半年通阅量统计共量2万2050册，较去年上半年1万4796册，明显成长。</p>
 <p>文化处说，因各乡镇图书馆人力不足，无法天天寄出读者跨馆借阅的图书，一般需要7个工作天才能送达。因此，今年7月特别与屏东邮局合作，各乡镇图书馆固定每周二、四都有通阅的图书到馆，缩短寄送时间，读者也免久候，让通阅服务不仅免费更有效率。</p>
-<figure id="12236081" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/07/8ea74921511db97ca19be82c2b1b1661-450x338.jpg" alt="屏东县公共图书馆服务再升级，满足读者多元化需求。" width="500" /><figcaption class="wp-caption-text">屏东县公共图书馆服务再升级，满足读者多元化需求。（屏东县政府文化处提供）</figcaption></figure>
+<figure id="12236081" aria-describedby="caption-12236081" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/07/8ea74921511db97ca19be82c2b1b1661-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/07/8ea74921511db97ca19be82c2b1b1661-450x338.jpg" alt="屏东县公共图书馆服务再升级，满足读者多元化需求。" width="500" /></a><figcaption id="caption-12236081" class="wp-caption-text">屏东县公共图书馆服务再升级，满足读者多元化需求。（屏东县政府文化处提供）</figcaption></figure>
 <p>此外，县府争取教育部经费挹注，全县乡镇图书馆宽频网路皆提升到100MB，并辅导各馆增加WIFI无线热点服务。全县馆内共添购个人电脑273台、笔记型电脑53台及平板电脑259台等，并办理数位推广及教育训练课程，增加民众及馆员资讯应用能力，让图书馆不仅是看书的地方，也提供上网查阅资料、数位学习的多功能环境，成为名符其实的社区公共资讯站。</p>
 <p>因应多元化的阅读需求，屏县公共图书馆不断强化各项服务，包括台湾云端书库＠屏东（http://lib.ebookservice.tw/pt/）充实电子书，改版屏东县图书馆藏查询系统，推出屏东县公共图书馆APP，开发网路办证服务，图书馆馆藏查询介面升级等，让民众不管是在家查书，图书馆取书甚至网路使用都很easy。</p>
 <p>责任编辑：王愉悦</p>
@@ -18,42 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/3/1/n11907033.md#1">国人上图书馆人次破亿 最爱语言文学类书</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/3/12/n11935095.md#1">冬山乡立图书馆获颁教育部大奖</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/3/19/n11953633.md#1">宜县阅读力表现佳 首获整体阅读力跃升城市</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/4/3/n12000605.md#1">防疫宅阅读 屏东图书馆借阅率大幅提升</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/5/25/n12134615.md#1">守护图书馆 城隍庙捐赠除菌机1台防护隔板29座</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/6/23/n12206335.md#1">基隆图书馆开放时间及阅读活动 七月起解禁</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12236083.md#1">AI科技导入 屏东香蕉销日破千吨</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12236073.md#1">嘉义市抢手的暑假假日机车考照服务又来啰</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12235733.md#1">嘉市卫生局关怀高风险妇女育儿服务周到</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12235776.md#1">市区客运105路自7月1日起绕驶永庆高中</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/1/n11907033.md#1">国人上图书馆人次破亿 最爱语言文学类书</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11935095.md#1">冬山乡立图书馆获颁教育部大奖</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953633.md#1">宜县阅读力表现佳 首获整体阅读力跃升城市</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/4/3/n12000605.md#1">防疫宅阅读 屏东图书馆借阅率大幅提升</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/5/25/n12134615.md#1">守护图书馆 城隍庙捐赠除菌机1台防护隔板29座</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/23/n12206335.md#1">基隆图书馆开放时间及阅读活动 七月起解禁</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741394.md#1">学童接种疫苗停课不停打 5月25日 BNT开打</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741369.md#1">因应疫情 嘉县高中以下暂停实体课程一周</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740840.md#1">控蛋商偷排废水污染埤塘 立委要求嘉义县府检讨</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740677.md#1">因应疫情高峰期 屏县高中以下学校停课一周</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10882697.md#1" target="_blank">谢显宁：董时进、董时光兄弟生死劫</a></li><li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/2/n11084381.md#1" target="_blank">林辉：中共这些“特别党员”效力后自取其辱</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/6/5/n12165121.md#1">【独家】北京卫戍区民兵花名册透露秘密</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/4/n12232772.md#1">白宫：总统正考虑两三件事 应对香港局势</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12233457.md#1">冀官员深夜与一女同室 被该女丈夫发现跳楼亡</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12233438.md#1">【翻墙必看】北京卫戍区密件泄军方秘密</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/4/n12232936.md#1">美中关系恶化 中共前高官称“脱钩难避免”</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/3/n12230960.md#1">国安恶法逼出港人创意 《愿荣光》变数字歌</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12233623.md#1">美国巨星麦可杰克森转生到湖北工地？</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/3/n12231338.md#1">产妇难产急救无效 新生宝宝一举动让妈妈醒了</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/5/n12234872.md#1">TVB祭加辣条款 郑敬基：前所未有的白色恐怖</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/7/3/n12229948.md#1">犹太拉比：中共为邪恶之首 或引发末世战争</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/5/23/n12131413.md#1">【馨香雅句】为何韩国越南兴起汉字复活</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/6/29/n12220541.md#1">【佳人传】最像林黛玉的江南才女叶小鸾</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/6/24/n12209058.md#1">趋吉避凶凭善念 幸逢相士术通神</a></li>
-<li><a href="https://github.com/ksgvho3562/djy/blob/master/gb/20/5/26/n12138633.md#1">【康熙大帝】北疆拒俄 永戍龙兴之地</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ksgvho3562/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ksgvho3562/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/6/n12236078.htm">因应多元阅读需求 屏东图书馆服务再升级</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/6/n12236078.htm">因应多元阅读需求 屏东图书馆服务再升级</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ksgvho3562/djy/blob/master/gb/20/7/6/n12236078.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ksgvho3562/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ksgvho3562/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ksgvho3562/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ksgvho3562/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ksgvho3562/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/7/6/n12236078.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
